--- a/index.html
+++ b/index.html
@@ -29,16 +29,47 @@
 
 	<div class="container">
 		<div class="row">
-		<!-- Banner -->
-
+			<div class="col-lg-12">
+				<img class="img-responsive" src="img/web-proimage_03.png">
+			</div>
+			<!-- <div class="col-lg-12 pull-left"> -->
+				<a href="#" class="pull-right"><img src="img/flag_en.jpg"></a>
+				<a href="#" class="pull-right"><img src="img/flag_vn.jpg"></a>
+			<!-- </div> -->
 		</div>
 		<div class="row">
-		<!-- Logo and Menu -->
+		<!-- menu -->
+			<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Brand</a>
+    </div>
 
-		</div>
-	</div>
-	
-  </nav>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+      </ul>
+      <form class="navbar-form navbar-right">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+		<!--  menu -->
+		</nav>
   <div class="container">
 	<div class="row space">
 		<div class="col-lg-12">
